@@ -126,9 +126,9 @@
   <l:gentext key="Email" text="Email"/>  
   <l:gentext key="Publisher" text="Editor"/>
   <l:gentext key="Date" text="Data"/>
-  <l:gentext key="Next" text="Urm&#259;torul"/>
-  <l:gentext key="Previous" text="Precedentul"/>
-  <l:gentext key="Contents" text="Cuprins"/>
+  <l:gentext key="Next" text="Seguente"/>
+  <l:gentext key="Previous" text="Precedente"/>
+  <l:gentext key="Contents" text="Contenuto"/>
 
   <l:context name="title">
    <l:template name="bookinfo" text="Informa&#355;ii despre acest document"/>
