@@ -1,3 +1,8 @@
+2003-06-25  Glynn Foster   <glynn.foster@sun.com>
+
+	* stylesheets/l10n.txt: Update italian translation for 
+	Next/Previous/Content descriptions.
+
 2003-06-13  Mikael Hallendal  <micke@imendio.com>
 
         * *: Updated my contact information
